<resources>
    <string name="app_name" translatable="false">Murmur</string>
    <string name="mac_dialog_title">Almost ready</string>
    <string name="mac_dialog_message">Please turn on Bluetooth, go to Status screen and copy &amp; paste your Bluetooth address here:</string>
    <string name="mac_dialog_message_small_why">Why are we asking for this?</string>
    <string name="mac_dialog_message_small">Murmur uses Bluetooth to communicate. Unfortunately in Android 6.0 applications cannot get programmatic access to the device\'s Bluetooth address so we need your help in getting it. Don\'t worry - you will only have to enter this once.</string>
    <string name="open">Navigation Drawer is Open</string>
    <string name="close">Navigation Drawer is Closed</string>
    <string name="offline_mode_toast">Murmur is running in Offline mode</string>
    <string name="notification_connection_error_title">Connection Error</string>
    <string name="notification_connection_error_message">Turn on BT/WiFi or switch to Offline</string>
    <string name="notification_no_bluetooth_title">Connection Error: Bluetooth is off</string>
    <string name="notification_no_bluetooth_message">Please turn on Bluetooth or switch to Offline mode</string>
    <string name="notification_no_wifi_title">Connection Error: WiFi is off</string>
    <string name="notification_no_wifi_message">Please turn on WiFi or switch to Offline mode</string>
    <string name="error_notification_action_onwifi">Turn on</string>
    <string name="error_notification_action_turnon_bt">Turn on</string>
    <string name="error_notification_action_off_service">Switch to Offline</string>
    <string name="unread_notification_title">New unread messages</string>
    <string name="unread_notification_content">New exchanges</string>
    <string name="new_messages_notification_desc">new messages</string>
    <string name="new_message_notification_desc">new message</string>
    <string name="new_messages_notification_btn">View New</string>
    <string name="exchanges">new exchanges</string>
    <string name="exchange">new exchange</string>
    <string name="drawer_menu_feed">Feed</string>
    <string name="drawer_menu_starred">Starred</string>
    <string name="drawer_menu_offline_mode">Offline mode</string>
    <string name="drawer_menu_contact">Contacts</string>
    <string name="drawer_menu_profile">Profile</string>
    <string name="drawer_menu_settings">Settings</string>
    <string name="drawer_menu_help">Help &amp; feedback</string>
    <string name="drawer_menu_info">Info</string>
    <string name="drawer_menu_reset">Reset app</string>
    <string name="drawer_menu_export">Export feed</string>
    <string name="drawer_menu_share_app">Share Murmur</string>
    <string name="drawer_menu_advanced">Advanced</string>
    <string name="share_using">Share using</string>
    <string name="export_subdiractory" translatable="false">Murmur exports</string>
    <string name="export">Exporting....</string>
    <string name="export_message">Please wait...</string>
    <string name="export_successful">Feed exported to your Download folder</string>
    <string name="export_failed">Oops, feed export failed, please try again</string>
    <string name="share_prefix">Sent with Murmur</string>
    <string name="empty_string"></string>
    <string name="select_all">Select All</string>
    <string name="deselect_all">Deselect All</string>
    <string name="sort_opt_newest">Newest</string>
    <string name="sort_opt_oldest">Oldest</string>
    <string name="sort_opt_mostendorsed">Most endorsed</string>
    <string name="sort_opt_leastendorsed">Least endorsed</string>
    <string name="sort_opt_mostconnected">Most connected</string>
    <string name="sort_opt_leastconnected">Least connected</string>
    <string name="send">Send</string>
    <string name="search_title">Search</string>
    <string name="retweet">Retweet</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="delete_from_sender">Same nickname</string>
    <string name="delete_by_connection">Same &amp; lower score</string>
    <string name="delete_by_exchange">Same exchange</string>
    <string name="delete_tree">Including replies</string>
    <string name="delete_dialog_title">Delete items</string>
    <string name="delete_dialog_message1">Are you sure you wish to delete</string>
    <string name="delete_dialog_message2">items</string>
    <string name="days_short">d</string>
    <string name="just_now">last hour</string>
    <string name="today">today</string>
    <string name="h_ago">hr ago</string>
    <string name="d_ago">d ago</string>
    <string name="self_destruct_in">self-destructs in</string>
    <string name="reset_dialog_title">Reset application</string>
    <string name="reset_app_message">Are you sure you wish to reset Murmur?\nAll messages and contacts will be erased</string>
    <string name="confirm_reset_dialog_title">Confirm reset</string>
    <string name="confirm_reset_app_message">Click \'yes\' to reset Murmur.</string>
    <string name="new_post">New post</string>
    <string name="reply">Reply</string>
    <string name="post_hint">Type your message</string>
    <string name="timebound_dialog_title">Self-destruct</string>
    <string name="hours_short">hrs</string>
    <string name="no_gps_error">Could not determine location please activate your GPS</string>
    <string name="pseudonym_title">Nickname</string>
    <string name="qr_title">QR Code</string>
    <string name="add">Add</string>
    <string name="add_friend_dialog_title">Add contact</string>
    <string name="add_friend_dialog_body">Select method</string>
    <string name="add_friend_qrcode">QR-code</string>
    <string name="add_friend_phonebook">Phonebook</string>
    <string name="conf_friend_dialog_title">Edit contact</string>
    <string name="conf_friend_dialog_name_title">Nickname</string>
    <string name="conf_friend_dialog_number_title">Phone</string>
    <string name="delete_dialog_friend1">Are you sure you wish to delete</string>
    <string name="delete_dialog_friend2">items</string>
    <string name="qr_scanner_message">Scan a Murmur QR code</string>
    <string name="qr_code_prefix" translatable="false">Murmur:</string>
    <string name="contact_add_conf">Contact Added</string>
    <string name="contact_exist">Already in contacts</string>
    <string name="contact_add_fail">Selected contact doesn\'t have a phone number</string>
    <string name="qr_badqr_error">Not a Murmur QR code</string>
    <string name="select_profile_title">Choose a profile</string>
    <string name="profile_flexible">More features / less security</string>
    <string name="profile_strict">More security / less features</string>
    <string name="profile_custom">Custom</string>
    <string name="profile_custom_annotation">Recommended only for advanced users</string>
    <string name="settings_anonymity_title">Anonymity</string>
    <string name="settings_timestamp">Timestamps</string>
    <string name="settings_location_tagging">Location tagging</string>
    <string name="settings_pseudonym">Nicknames</string>
    <string name="settings_privacy_title">Privacy</string>
    <string name="settings_trust">Connection scores</string>
    <string name="settings_self_dest">Self-destruct duration</string>
    <string name="settings_self_dest_annotation">Default self-destruct message duration in hours</string>
    <string name="settings_restricted">Restricted messages (contacts)</string>
    <string name="settings_restricted_annotation">Minimum shared contacts to send message</string>
    <string name="settings_feed_title">Feed</string>
    <string name="settings_autodelete">Auto-delete messages</string>
    <string name="settings_autodelete_trust_annotation">With a connection score less than</string>
    <string name="settings_autodelete_age_annotation">Older than (in days)</string>
    <string name="settings_contacts_title">Contacts</string>
    <string name="settings_add_via_phonebook">Add contacts via phonebook</string>
    <string name="settings_add_via_qr">Add contacts via QR code</string>
    <string name="settings_exchange_title">Exchanges</string>
    <string name="settings_max_messages_p_exchange">Maximum messages per exchange</string>
    <string name="settings_timeout_p_exchange">Timeout between exchanges</string>
    <string name="settings_network_title">Network</string>
    <string name="settings_mac_title">Bluetooth MAC address</string>
    <string name="aboutTitle">About Murmur</string>
    <string name="aboutBody">Murmur is an open-source, anonymous messaging app that does not require an Internet connection. It provides an alternative means of communication that caters to various types of users based on their communication, anonymity and security needs. Messages do not spread in real-time like in other messaging apps that are using the Internet and instead spread directly from one device to another using BlueTooth and WiFi Direct whenever devices are in physical proximity to each other. The network formed by Murmur devices is delay-tolerant, meaning when a user sends a message, it is saved in the app until it is within range of another device. The app runs in the background, periodically searching for nearby devices and sending and receiving messages to and from each device, therefore not requiring user’s active participation in message forwarding.\n\nNote, this is an early version of the app that has gone through only limited testing. Unfortunately, given the current design of the Android OS (Operating System) there are still severe limitations on apps, such as Murmur, attempting to create peer-to-peer connectivity. We therefore highly recommend, especially for users with stricter anonymity and security requirements, to thoroughly research and test the app prior to using it.</string>
    <string name="share_app_promo">Check out Murmur!</string>
    <string name="apk_url" translatable="false">https://github.com/levimatan/murmur/raw/master/murmur.apk</string>
    <string name="skip_welcome">Next</string>
    <string name="onboarding1_title">title1</string>
    <string name="onboarding1_message">message1</string>
    <string name="onboarding2_title">title3</string>
    <string name="onboarding2_message">message3</string>
    <string name="onboarding3_title">title3</string>
    <string name="onboarding3_message">message3</string>
    <string name="comments">Replies</string>
    <string name="send_feedback">Send feedback</string>
    <string name="feedback_email" translatable="false">murmur_support@denovogroup.org</string>
    <string name="feedback_title" translatable="false">Murmur feedback</string>
    <string name="feedback_intro" >Dear Murmur support representative, </string>
    <string name="more_help"><u>More FAQ</u></string>
    <string name="help_title1">How to use the Feed ?</string>
    <string name="help_content1">The feed is the main screen in the app. It displays all the messages and allows you to sort, search, save (star) and delete messages amongst other things. You can sort the messages in the feed by time, endorsements or connection score, and you can search for specific messages by entering a nickname ( ‘@’ followed by the name), hashtag (‘#’ followed by tag) or keyword(s) in the search input box.</string>
    <string name="help_title2">What do the icons in each message represent?</string>
</resources>